--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,44 +1,54 @@
 version: 2
-project_name: opencode
+project_name: opencode-native
+
 before:
   hooks:
+    # Optional: ensure dependencies are tidy before building
+    - go mod tidy
+
 builds:
   - env:
       - CGO_ENABLED=0
     goos:
       - linux
       - darwin
+      # Windows is optional, uncomment if needed
+      # - windows
     goarch:
       - amd64
       - arm64
+    # Optimization: -s -w strips debug info (smaller binary)
     ldflags:
       - -s -w -X github.com/MerrukTechnology/OpenCode-Native/internal/version.Version={{.Version}}
     main: ./main.go
 
 archives:
   - format: tar.gz
+    # Use a standard, clean naming convention
     name_template: >-
-      opencode-
-      {{- if eq .Os "darwin" }}mac-
-      {{- else if eq .Os "windows" }}windows-
-      {{- else if eq .Os "linux" }}linux-{{end}}
+      {{ .ProjectName }}_
+      {{- title .Os }}_
       {{- if eq .Arch "amd64" }}x86_64
-      {{- else if eq .Arch "#86" }}i386
+      {{- else if eq .Arch "386" }}i386
       {{- else }}{{ .Arch }}{{ end }}
       {{- if .Arm }}v{{ .Arm }}{{ end }}
     format_overrides:
       - goos: windows
         format: zip
+
 checksum:
   name_template: "checksums.txt"
+
 snapshot:
-  name_template: "0.0.0-{{ .Timestamp }}"
+  # 'name_template' is deprecated in v2 for snapshots
+  version_template: "{{ .Tag }}-next"
+
 aurs:
-  - name: obukhovaa
+  - name: "MerrukTechnology"
     homepage: "https://github.com/MerrukTechnology/OpenCode-Native"
-    description: "terminal based agent that can build anything"
+    description: "Lightweight, native AI coding agent optimized for performance."
     maintainers:
-      - "kujtimiihoxha <kujtimii.h@gmail.com>"
+      - "Merruk Technology <yahyaclub@gmail.com>"
     license: "MIT"
     private_key: "{{ .Env.AUR_KEY }}"
     git_url: "ssh://aur@aur.archlinux.org/obukhovaa-bin.git"
@@ -48,13 +58,17 @@ aurs:
       - opencode
     package: |-
       install -Dm755 ./opencode "${pkgdir}/usr/bin/opencode"
+
 brews:
   - repository:
       owner: obukhovaa
       name: homebrew-tap
+
 nfpms:
-  - maintainer: kujtimiihoxha
-    description: terminal based agent that can build anything
+  - maintainer: "MerrukTechnology"
+    description: "Lightweight, native AI coding agent optimized for performance."
+    homepage: "https://github.com/MerrukTechnology/OpenCode-Native"
+    license: "MIT"
     formats:
       - deb
       - rpm
