--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -78,7 +78,7 @@ jobs:
         with:
           version: latest
           # This enables SARIF output so results show in GitHub Security tab
-          args: --out-format sarif > report.sarif
+          args: --timeout 60 --out-format sarif > report.sarif
           # Important: ignore-empty ensures it doesn't fail if no issues found
           skip-cache: false
 
