--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -74,11 +74,11 @@ jobs:
           go-version: '>=1.24.13' # Adjust based on your opencode version
 
       - name: golangci-lint
-        uses: golangci/golangci-lint-action@v6
+        uses: golangci/golangci-lint-action@fce8c989772fe5b89e9c70c94aac89041cfb3aa9
         with:
           version: latest
           # This enables SARIF output so results show in GitHub Security tab
-          args: --timeout 60s --out-format sarif > report.sarif
+          args: --out-format sarif > report.sarif
           # Important: ignore-empty ensures it doesn't fail if no issues found
           skip-cache: false
 
