--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -9,7 +9,9 @@ on:
     - cron: '41 14 * * 3'
 
 permissions:
+  actions: read
   contents: read
+  security-events: write
 
 jobs:
   # JOB 1: CodeQL (Deep Analysis)
@@ -24,7 +26,7 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v4
+      uses: actions/checkout@v6
       with:
         fetch-depth: 0
 
@@ -64,7 +66,7 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
         with:
           fetch-depth: 0
 
@@ -78,7 +80,7 @@ jobs:
         with:
           version: latest
           # This enables SARIF output so results show in GitHub Security tab
-          args: --output sarif:report.sarif
+          args: ' > report.sarif'
           # Important: ignore-empty ensures it doesn't fail if no issues found
           skip-cache: false
 
