--- a/.github/workflows/codacy.yml
+++ b/.github/workflows/codacy.yml
@@ -10,14 +10,20 @@ on:
     - cron: '18 3 * * 5'
 
 permissions:
+  actions: read
   contents: read
+  packages: read
+  pull-requests: read
 
 jobs:
   codacy-security-scan:
     permissions:
-      contents: read # for actions/checkout to fetch code
-      security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
       actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
+      contents: read # for actions/checkout to fetch code
+      packages: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
+      pull-requests: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
+      security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
+
     name: Codacy Security Scan
     runs-on: ubuntu-latest
     steps:
@@ -64,3 +70,5 @@ jobs:
         uses: github/codeql-action/upload-sarif@v4
         with:
           sarif_file: results.sarif
+          category: codacy-security-scan
+          token: ${{ secrets.GITHUB_TOKEN }}
