--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -11,7 +11,8 @@ on:
 permissions:
   actions: read
   contents: read
-  security-events: write
+  packages: read
+  pull-requests: read
 
 jobs:
   # JOB 1: CodeQL (Deep Analysis)
@@ -19,10 +20,11 @@ jobs:
     name: CodeQL Analysis
     runs-on: ubuntu-latest
     permissions:
-      security-events: write
-      packages: read
-      actions: read
-      contents: read
+      actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
+      contents: read # for actions/checkout to fetch code
+      packages: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
+      pull-requests: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
+      security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
 
     steps:
     - name: Checkout repository
@@ -61,8 +63,10 @@ jobs:
     name: Lint & Security
     runs-on: ubuntu-latest
     permissions:
-      security-events: write
+      actions: read
       contents: read
+      security-events: write
+      pull-requests: read
 
     steps:
       - name: Checkout repository
@@ -90,3 +94,4 @@ jobs:
         with:
           sarif_file: report.sarif
           category: golangci-lint
+          token: ${{ secrets.GITHUB_TOKEN }}
