--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -5,14 +5,15 @@
 # file with configuration.  For more information, see:
 # https://github.com/actions/labeler
 
-name: Labeler
-on: [pull_request_target]
+name: "Pull Request Labeler"
+on: [pull_request]
 
 jobs:
-  label:
+  labeler:
 
     runs-on: ubuntu-latest
     permissions:
+      issues: write
       contents: read
       pull-requests: write
 
@@ -20,3 +21,4 @@ jobs:
     - uses: actions/labeler@v4
       with:
         repo-token: "${{ secrets.GITHUB_TOKEN }}"
+        configuration-path: .github/workflows/label.yml
