--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -21,4 +21,4 @@ jobs:
     - uses: actions/labeler@v4
       with:
         repo-token: "${{ secrets.GITHUB_TOKEN }}"
-        configuration-path: .github/labeler.yml
+        configuration-path: .github/workflows/label.yml
