labeler: covering all folders and features needed for now

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,158 +1,164 @@
-# Add 'Documentation' label to any changes within 'docs, specs and md files' folder or any subfolders
-Documentation:
-- changed-files:
-  - any-glob-to-any-file: ['docs/**', 'spec/**', '**/**/*.md']
+# --- GLOBAL & META LABELS ---
+# Add 'CMD' label to any changes inside the cmd folder
+CMD:
+  - changed-files:
+    - any-glob-to-any-file: 'cmd/**/*'
 
-# Add 'Configuration' label to any changes within 'config, ci and yaml files' folder or any subfolders
-Configuration:
-- changed-files:
-  - any-glob-to-any-file:
-    - 'config/**'
-    - 'ci/**'
-    - '**/*.yaml'
-    - '**/*.yml'
-    - '**/*.json'
-    - '.vscode/**'
-    - '.cursor/**'
+# Add 'Internal' label to any changes inside the internal folder
+Internal:
+  - changed-files:
+    - any-glob-to-any-file: 'internal/**/*'
 
-# Add 'Source' label to any changes within 'source files' folder or any subfolders
+# Add 'Source' label to any Go file change
 Source:
-- changed-files:
-  - any-glob-to-any-file: ['**/*.go']
+  - changed-files:
+    - any-glob-to-any-file: '**/*.go'
 
-# Add 'Database' label to any changes within 'database files' folder or any subfolders
-Database:
-- changed-files:
-  - any-glob-to-any-file: ['**/db/**', '**/*.sql']
-
-# Add 'Agents' label to any changes within 'agents files' folder or any subfolders
+# --- CORE PROJECT DIRECTORIES (internal/) ---
 Agents:
-- changed-files:
-  - any-glob-to-any-file: ['**/agent/**', '**/agent/*.go']
+  - changed-files:
+    - any-glob-to-any-file: 'internal/agent/**/*'
 
-# Add 'App' label to any changes within 'app files' folder or any subfolders
 App:
-- changed-files:
-  - any-glob-to-any-file: ['**/app/**', '**/app/*.go']
+  - changed-files:
+    - any-glob-to-any-file: 'internal/app/**/*'
 
-# Add 'Config' label to any changes within 'config files' folder or any subfolders
+Completions:
+  - changed-files:
+    - any-glob-to-any-file: 'internal/completions/**/*'
+
 Config:
-- changed-files:
-  - any-glob-to-any-file: ['**/config/**', '**/config/*.go']
+  - changed-files:
+    - any-glob-to-any-file: 'internal/config/**/*'
 
-# Add 'Diff' label to any changes within 'diff files' folder or any subfolders
+Database:
+  - changed-files:
+    - any-glob-to-any-file:
+      - 'internal/db/**/*'
+      - '**/*.sql'
+
 Diff:
-- changed-files:
-  - any-glob-to-any-file: ['**/diff/**', '**/diff/*.go']
+  - changed-files:
+    - any-glob-to-any-file: 'internal/diff/**/*'
 
-# Add 'FileUtils' label to any changes within 'fileutils files' folder or any subfolders
 FileUtils:
-- changed-files:
-  - any-glob-to-any-file: ['**/fileutil/**', '**/fileutil/*.go']
+  - changed-files:
+    - any-glob-to-any-file: 'internal/fileutil/**/*'
 
-# Add 'History' label to any changes within 'history files' folder or any subfolders
+Format:
+  - changed-files:
+    - any-glob-to-any-file: 'internal/format/**/*'
+
 History:
-- changed-files:
-  - any-glob-to-any-file: ['**/history/**', '**/history/*.go']
+  - changed-files:
+    - any-glob-to-any-file: 'internal/history/**/*'
 
-# Add 'LLM' label to any changes within 'LLM files' folder or any subfolders
 LLM:
-- changed-files:
-  - any-glob-to-any-file: ['**/llm/**', '**/llm/*.go']
+  - changed-files:
+    - any-glob-to-any-file: 'internal/llm/**/*'
 
-# Add 'Logging' label to any changes within 'logging files' folder or any subfolders
-'Logging':
+Models:
 - changed-files:
-  - any-glob-to-any-file: ['**/logging/**', '**/logging/*.go']
+  - any-glob-to-any-file: 'internal/llm/models/**'
 
-# Add 'LSP' label to any changes within 'LSP files' folder or any subfolders
-LSP:
+Providers:
 - changed-files:
-  - any-glob-to-any-file: ['**/lsp/**', '**/lsp/*.go']
+  - any-glob-to-any-file: 'internal/llm/providers/**'
 
-# Add 'Messages' label to any changes within 'messages files' folder or any subfolders
-Messages:
-- changed-files:
-  - any-glob-to-any-file: ['**/messages/**', '**/messages/*.go']
-
-# Add 'Permissions' label to any changes within 'permissions files' folder or any subfolders
-Permissions:
-- changed-files:
-  - any-glob-to-any-file: ['**/permission/**', '**/permission/*.go']
-
-# Add 'PubSub' label to any changes within 'pubsub files' folder or any subfolders
-PubSub:
-- changed-files:
-  - any-glob-to-any-file: ['**/pubsub/**', '**/pubsub/*.go']
-
-# Add 'Sessions' label to any changes within 'sessions files' folder or any subfolders
-Sessions:
-- changed-files:
-  - any-glob-to-any-file: ['**/session/**', '**/session/*.go']
-
-# Add 'Tools' label to any changes within 'tools files' folder or any subfolders
 Tools:
 - changed-files:
-  - any-glob-to-any-file: ['**/tools/**', '**/tools/*.go']
+  - any-glob-to-any-file: 'internal/llm/tools/**'
 
-# Add 'Skills' label to any changes within 'skills files' folder or any subfolders
+Logging:
+  - changed-files:
+    - any-glob-to-any-file: 'internal/logging/**/*'
+
+LSP:
+  - changed-files:
+    - any-glob-to-any-file: 'internal/lsp/**/*'
+
+Messages:
+  - changed-files:
+    - any-glob-to-any-file: 'internal/message/**/*'
+
+Permissions:
+  - changed-files:
+    - any-glob-to-any-file: 'internal/permission/**/*'
+
+PubSub:
+  - changed-files:
+    - any-glob-to-any-file: 'internal/pubsub/**/*'
+
+Sessions:
+  - changed-files:
+    - any-glob-to-any-file: 'internal/session/**/*'
+
 Skills:
-- changed-files:
-  - any-glob-to-any-file: ['**/skill/**', '**/skill/*.go']
+  - changed-files:
+    - any-glob-to-any-file: 'internal/skill/**/*'
 
-# Add 'TUI' label to any changes within 'LLM files' folder or any subfolders
 TUI:
-- changed-files:
-  - any-glob-to-any-file: ['**/tui/**', '**/tui/*.go']
+  - changed-files:
+    - any-glob-to-any-file: 'internal/tui/**/*'
 
-# Add 'Dependencies' label to any changes within 'dependencies files' folder or any subfolders
+Version:
+  - changed-files:
+    - any-glob-to-any-file: 'internal/version/**/*'
+
+# --- INFRASTRUCTURE & CONFIGURATION ---
+Configuration:
+  - changed-files:
+    - any-glob-to-any-file:
+      - 'config/**'
+      - 'ci/**'
+      - '**/*.yaml'
+      - '**/*.yml'
+      - '**/*.json'
+      - '.vscode/**'
+      - '.cursor/**'
+
 Dependencies:
-- changed-files:
-  - any-glob-to-any-file: ['go.mod', 'go.sum']
+  - changed-files:
+    - any-glob-to-any-file:
+      - go.mod
+      - go.sum
 
-# Add 'Docker' label to any changes within 'docker files' folder or any subfolders
 Docker:
-- changed-files:
-  - any-glob-to-any-file: ['docker/**', '**/Dockerfile']
+  - changed-files:
+    - any-glob-to-any-file: ['docker/**', '**/Dockerfile']
 
-# Add 'Makefile' label to any changes within 'Makefile files' folder or any subfolders
 Makefile:
-- changed-files:
-  - any-glob-to-any-file: ['Makefile', 'makefile']
+  - changed-files:
+    - any-glob-to-any-file: ['[Mm]akefile']
 
-# Add 'CI' label to any changes within 'CI files' folder or any subfolders
 CI:
-- changed-files:
-  - any-glob-to-any-file: ['.github/**', '.githooks/**']
+  - changed-files:
+    - any-glob-to-any-file: ['.github/**', '.githooks/**']
 
-# Add 'Scripts' label to any changes within 'scripts and bin files' folder or any subfolders
 Scripts:
-- changed-files:
-  - any-glob-to-any-file: ['scripts/**', '.githooks/**']
+  - changed-files:
+    - any-glob-to-any-file: ['scripts/**', '.githooks/**']
 
-# Add 'Tests' label to any changes within 'test files' folder or any subfolders
+Documentation:
+  - changed-files:
+    - any-glob-to-any-file: ['docs/**', 'spec/**', '**/*.md']
+
 Tests:
-- changed-files:
-  - any-glob-to-any-file: ['test/**', '**/*_test.go']
+  - changed-files:
+    - any-glob-to-any-file: ['test/**', '**/*_test.go']
 
-# Add 'CMD' label to any changes to cmd files within the source dir
-CMD:
-- changed-files:
-  - any-glob-to-any-file: 'cmd/**/*'
-
-# Add 'Internal' label to any changes to internal files within the source dir
-Internal:
-- changed-files:
-  - any-glob-to-any-file: 'internal/**/*'
-
-# Add 'feature' label to any PR where the head branch name starts with `feature` or has a `feature` section in the name
+# --- BRANCH & TYPE LOGIC ---
 Feature:
- - head-branch: ['^feature', 'feature']
+  - head-branch: ['^feature/.*', '.*feature.*']
 
-# Add 'release' label to any PR that is opened against the `main` branch
-Release:
- - base-branch: 'main'
-
-# Add 'bug' label to any PR that has a `fix` section in the name
 Bug:
- - head-branch: ['^fix', 'fix']
+  - head-branch: ['^fix/.*', '.*fix.*', '^bug/.*', '.*bug.*']
+
+Hotfix:
+  - head-branch: ['^hotfix/.*', '.*hotfix.*']
+
+Invalid:
+  - head-branch: ['^temp/.*', '.*test-ignore.*', '^trash/.*']
+
+Release:
+  - base-branch: ['main']
