--- a/.github/workflows/codacy.yml
+++ b/.github/workflows/codacy.yml
@@ -70,4 +70,5 @@ jobs:
         uses: github/codeql-action/upload-sarif@v4
         with:
           sarif_file: results.sarif
+          category: codacy-analysis
           token: ${{ secrets.GITHUB_TOKEN }}
