--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,6 +24,11 @@ jobs:
       with:
         go-version: ">=1.24.13"
 
+    - name: Install dependencies (Ripgrep & FZF)
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y ripgrep fzf
+
     - name: Build
       run: go build -v ./...
 
