--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,11 @@ jobs:
           fetch-depth: 0
           fetch-tags: true # Ensure all tags are fetched for goreleaser to work correctly
 
+      - name: Install dependencies (Ripgrep & FZF)
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y ripgrep fzf
+
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
