--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -7,10 +7,12 @@ permissions:
   contents: read
 
 on:
-  push:
-    branches: [ "main" ]
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
+  push:
+    branches:
+      - main
 
 jobs:
 
@@ -22,15 +24,24 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
-        go-version: ">=1.24.13"
+        go-version: '1.24.x'
 
     - name: Install dependencies (Ripgrep & FZF)
       run: |
         sudo apt-get update
         sudo apt-get install -y ripgrep fzf
 
-    - name: Build
-      run: go build -v ./...
+    - name : Run Generate
+      run: go generate ./...
 
-    - name: Test
+    - name : Run fmt
+      run: go fmt ./...
+
+    - name : Run Vet
+      run: go vet ./...
+
+    - name: Run Test
       run: go test -v ./...
+
+    - name: Run Build
+      run: go build -v ./...
