--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -1,13 +1,10 @@
-# This workflow warns and then closes issues and PRs that have had no activity for a specified amount of time.
-#
-# You can adjust the behavior by modifying this file.
-# For more information, see:
-# https://github.com/actions/stale
-name: Mark stale issues and pull requests
+# This workflow warns and then closes issues that have had no activity for a specified amount of time.
+name: Mark and close stale issues
 
 on:
   schedule:
-  - cron: '27 12 * * *'
+  # Scheduled to run at 1:30 UTC everyday
+  - cron: '30 1 * * *'
 
 jobs:
   stale:
@@ -15,13 +12,24 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       issues: write
-      pull-requests: write
 
     steps:
     - uses: actions/stale@v5
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        stale-issue-message: 'Stale issue message'
-        stale-pr-message: 'Stale pull request message'
-        stale-issue-label: 'no-issue-activity'
-        stale-pr-label: 'no-pr-activity'
+        days-before-issue-stale: 14
+        days-before-issue-close: 7
+        stale-issue-label: "status:stale"
+        close-issue-reason: not_planned
+        any-of-labels: "status:awaiting user response"
+        remove-stale-when-updated: true
+        labels-to-remove-when-unstale: 'status:awaiting user response,status:stale'
+        stale-issue-message: >
+          This issue has been marked as stale because it has been open for 7 days with no activity. It will be closed in 2 days if no further activity occurs.
+        close-issue-message: >
+          This issue was closed because it has been inactive for 9 days.
+          Please post a new issue if you need further assistance. Thanks!
+        # Label that can be assigned to issues to exclude them from being marked as stale
+        exempt-issue-labels: 'override-stale'
+        # Label that can be assigned to issues to exclude them from being marked as stale
+        exempt-pr-labels: 'override-stale'
